<resources>
    <string name="app_name">Stocky</string>
    <string name="update_available">Atualização disponível</string>
    <string name="update_description">Uma nova versão do Stocky está disponível.\nClique no botão abaixo para atualizar seu app.</string>
    <string name="update_button">Atualizar</string>
    <string name="title_stock_out">Saída no Estoque</string>
    <string name="text_stock_out">Selecione o produto abaixo e digite a quantidade a ser retirada do estoque.</string>
    <string name="product">Produto</string>
    <string name="quantity">Quantidade</string>
    <string name="btn_stock_out">Retirar</string>
    <string name="title_stock_in">Entrada no Estoque</string>
    <string name="text_stock_in">Selecione o produto abaixo e digite a quantidade a ser adicionada ao estoque.</string>
    <string name="txt_add">Adicionar</string>
    <string name="title_new_product">Novo Produto</string>
    <string name="text_new_product">Digite abaixo o produto que deseja adicionar ao estoque.</string>
    <string name="txt_print">Imprimir</string>
    <string name="title_orders">Pedidos</string>
    <string name="created_by">Created by Alessandro Reis, 2020.</string>
    <string name="title_history">Histórico</string>
    <string name="title_stock">Estoque</string>
    <string name="title_products">Produtos</string>
    <string name="text_in">Entrada</string>
    <string name="text_out">Saída</string>
    <string name="Type_largest_quantity">Digite uma quantidade maior que 0.</string>
    <string name="Update_notes_title">Notas de Atualização</string>
    <string name="product_registered">Produto cadastrado</string>
    <string name="error">ERRO!</string>
    <string name="type_product_name">Digite o nome do produto.</string>
    <string name="ok">OK</string>
    <string name="verification_successful">Verificação concluida com sucesso.</string>
    <string name="verification_failed">Verificação falhou.</string>
    <string name="not_possible_remove_more">Não é possível retirar uma quantidade maior do que a disponível.</string>
    <string name="old_APK_deleted">APK anterior deletado do armazenamento.</string>
    <string name="updating">Atualizando Stocky</string>
    <string name="updating_text">Estamos fazendo o download da nova atualização.</string>
    <string name="update">Stocky Update</string>
    <string name="update_desc">Atualização do Stocky</string>
    <string name="cancel">CANCELAR</string>
    <string name="product_deleted">O produto foi removido.</string>
    <string name="no">NÃO</string>
    <string name="yes">SIM</string>
    <string name="product_quantity">Quantidade: %1$s</string>
    <string name="product_date_change">Alteração: %1$s</string>
    <string name="delete_product">REMOVER PRODUTO</string>
    <string name="confirm_delete_product">Tem certeza que deseja remover o produto %1$s ?</string>
    <string name="type_new_product_name">Digite o nome do produto</string>
    <string name="change_product">ALTERAR PRODUTO</string>
    <string name="change_product_description">Alterar nome do produto %1$s</string>
    <string name="save">SALVAR</string>
    <string name="order_by_name_asc">Ordernar por nome (A-Z)</string>
    <string name="order_by_name_desc">Ordernar por nome (Z-A)</string>
    <string name="order_by_qtd_asc">Ordernar por quantidade (0-9)</string>
    <string name="order_by_qtd_desc">Ordernar por quantidade (9-0)</string>
    <string name="order_by_date_asc">Ordernar por data (asc)</string>
    <string name="order_by_date_desc">Ordernar por data (desc)</string>
</resources>